Scrollbar fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1469,8 +1469,7 @@ section {
 
 .stop-scrolling {
   height: 100vh;
-  overflow-y: scroll;
-  margin-left: calc(100vw - 100%);
+  overflow-y: hidden;
 }
 
 .wp-intro--fade {
